--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,10 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Ignored directories
 node_modules
-dist
-dist-ssr
-*.local
+
 
 # Editor directories and files
 .vscode/*
